test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: test-app
 annotations:
  nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
 rules:
  - host: test.win.cluster
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: test-nginx-service
          port:
           number: 80
