test/main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  labels:
    app: test-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      name: test-app
      labels:
        app: test-app
    spec:
      nodeSelector:
        "kubernetes.io/arch": "amd64"
      containers:
        - name: caddy
          image: caddy
          ports:
            - containerPort: 80
