test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: test-app
